[tool.poetry]
name = "drawgly"
version = "0.1.0"
description = ""
authors = ["fubin1999 <65430559+fubin1999@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "drawgly" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
